third-step: fix mappers.